--- a/EfCore5Practices/Views/_ViewImports.cshtml
+++ b/EfCore5Practices/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using EfCore5Practices
-@using EfCore5Practices.Models
+@using EfModel.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
