--- a/EfCore5Practices/Views/Book/Index.cshtml
+++ b/EfCore5Practices/Views/Book/Index.cshtml
@@ -23,11 +23,13 @@
                     <th>
                         Title
                     </th>
-
+                    <th>
+                        Price
+                    </th>
+                    <th>
+                        Publisher
+                    </th>
                     @*<th>
-                            Publisher
-                        </th>
-                        <th>
                             Authors
                         </th>*@
                     <th></th>
@@ -38,9 +40,13 @@
                         <td>
                             @item.Title
                         </td>
-                        @*<td>
-                                @item.Publisher.Name
-                            </td>
+                        <td>
+                            @item.Price
+                        </td>
+                        <td>
+                            @item.Publisher.Name
+                        </td>
+                        @*
                             <td>
                                 @{
                                     var authors = "";
